--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ repositories {
 dependencies {
     compile 'org.slf4j:slf4j-api:1.7.6'
     compile 'org.apache.httpcomponents:httpclient:4.3.2'
+    compile 'org.json:json:20140107'
 
     compile('nl.siegmann.epublib:epublib-core:3.1') {
         exclude module: 'slf4j-simple'
