--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,9 @@ repositories {
     maven {
         url 'https://github.com/psiegman/mvn-repo/raw/master/releases'
     }
+    maven {
+        url 'http://dl.bintray.com/ypoluektovich/otonashi-io'
+    }
 }
 
 dependencies {
@@ -17,6 +20,8 @@ dependencies {
     }
 
     compile 'org.simpleframework:simple:5.1.6'
+
+    compile 'io.otonashi:otonashi-cache:1.1.0'
 
     runtime 'org.slf4j:slf4j-simple:1.7.6'
 }
